Redirect all CTA buttons and signup routes to /login

--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,7 @@
     },
     {
       "source": "/signup",
-      "destination": "https://app.tryinterviewcoach.com/signup",
+      "destination": "https://app.tryinterviewcoach.com/login",
       "permanent": false
     }
   ]
